--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -10,6 +10,7 @@
     font-family: Arial, sans-serif;
     width: 100%;
     height: 100%;
+    background-color: #ffffff;
   }
   
   .container {
@@ -63,4 +64,14 @@
     text-align: center;
     padding: 1rem;
   }
+  .logo-image {
+    height: 300px;
+    width: 300px;
+    margin: 100px;
+    float: left; /* Float the logo image to the left */
+  }
   
+  .intro-container {
+    margin-top: 150px; /* Adjust the top margin to align with the logo image */
+    margin-left: 20px; /* Add some left margin for spacing */
+  }
