--- a/src/homecolor.css
+++ b/src/homecolor.css
@@ -1,7 +1,7 @@
 /* globalStyles.css */
 
 body {
-    background-color: #f0f8ff; /* Replace with your desired background color */
+    background-color: #ffffff; /* Replace with your desired background color */
     margin: 0; /* Remove default body margin */
     padding: 0; /* Remove default body padding */
   }
