--- a/src/components/About.css
+++ b/src/components/About.css
@@ -88,7 +88,7 @@ flex-direction: column;
   justify-content: space-between;
   /* margin-top: 10px; */
   width: 100%;
-  max-width: 900px; 
+  max-width: 1400px; 
 }
 
 .education-item {
@@ -117,7 +117,7 @@ flex-direction: column;
   align-items: center;
   position: relative;
   width: 100%;
-  max-width: 900px;
+  max-width: 1400px;
 }
 
 .timeline-item {
@@ -174,7 +174,7 @@ flex-direction: column;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: 900px;
+  max-width: 1400px;
 }
 
 .responsibility-item {
@@ -201,7 +201,7 @@ flex-direction: column;
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  /* background-color: rgba(0, 0, 0, 0.6); */
   color: #fff;
   padding: 10px;
   text-align: center;
