--- a/src/components/research.css
+++ b/src/components/research.css
@@ -2,12 +2,14 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     width: 100%;
+    flex: 1;
+    margin-right: 20px;
   }
   
   .research-header {
-    font-size: 2.4rem;
+    font-size: 10;
     margin-bottom: 30px;
     text-align: center;
   }
@@ -18,10 +20,12 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 20px;
+    margin-left: 9%;
+    margin-top: 1%;
   }
   
   .research-project {
-    background: #f8f9fa;
+    background: #f5f6f7;
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -57,4 +61,28 @@
       margin-bottom: 20px;
     }
   }
-  
+
+  .research-page {
+    display: flex;
+    justify-content: space-between; /* Ensures spacing between elements */
+    align-items: flex-start; /* Aligns items at the top */
+    
+  }
+
+
+  .project-information {
+    height:390px; 
+    width: 380px;
+    position: fixed; /* Keeps the div in place while scrolling */
+    top: 0; /* Aligns the top of the div with the top of the viewport */
+    right: 0; /* Aligns the div on the right side of the viewport */
+    background: #e0e6eb;
+    padding: 20px;
+    border-radius: 10px;
+    overflow-y: auto; /* Adds scroll inside the div if content is too long */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    z-index: 100; /* Ensures it does not get hidden behind other elements */
+    margin-right: 10%;
+    margin-top: 12%;
+    margin-bottom: 12%;
+  }
