--- a/src/components/youtubesection.css
+++ b/src/components/youtubesection.css
@@ -15,7 +15,7 @@
     text-decoration: none;
     color: inherit;
     font-size: 14px; /* Set the font-size to your desired size */
-    margin-top: 8px; /* Adjust the space between the image and the text as needed */
+    margin-top: 20px; /* Adjust the space between the image and the text as needed */
     text-align: center; /* Center the text below the image */
     line-height: 1.2; /* Adjust line height for better readability if needed */
     word-wrap: break-word; /* Prevents long words from overflowing */
@@ -36,6 +36,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: transform 2s ease-in-out, opacity 0.5s ease;
   }
   
   /* Continue with your responsive adjustments */
@@ -49,5 +50,8 @@
     .youtube-section {
       grid-template-columns: 1fr;
     }
+  }
+  .youtube-thumbnail:hover {
+    transform: scale(1.05); /* Slightly increase size on hover */
   }
   
