--- a/src/components/youtubesection.css
+++ b/src/components/youtubesection.css
@@ -35,9 +35,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    transition: transform 2s ease-in-out, opacity 0.5s ease;
-  }
+    object-fit:inherit;
+    }
   
   /* Continue with your responsive adjustments */
   @media (max-width: 1024px) {
