--- a/src/components/research.css
+++ b/src/components/research.css
@@ -1,3 +1,5 @@
+
+
 .research-container {
     padding: 20px;
     display: flex;
@@ -60,6 +62,7 @@
     .research-project {
       margin-bottom: 20px;
     }
+    
   }
 
   .research-page {
@@ -69,13 +72,16 @@
     
   }
 
+  
+  
+ 
 
   .project-information {
     height:390px; 
     width: 380px;
     position:sticky; /* Keeps the div in place while scrolling */
     top: 0; /* Aligns the top of the div with the top of the viewport */
-    right: 0; /* Aligns the div on the right side of the viewport */
+    right: 0px; /* Aligns the div on the right side of the viewport */
     background: #dae2e7;
     padding: 20px;
     border-radius: 10px;
@@ -83,6 +89,8 @@
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     z-index: 100; /* Ensures it does not get hidden behind other elements */
     margin-right: 10%;
-    margin-top: 12%;
+    margin-top: 8%;
     margin-bottom: 12%;
   }
+
+  
