--- a/src/components/Publications.css
+++ b/src/components/Publications.css
@@ -17,7 +17,8 @@
   /* Container for the image */
   .image-pub-container {
     width: 100%;
-    max-width: 400px; /* Adjust the maximum width as needed*/
+    max-width: 200px; /* Adjust the maximum width as needed*/
+    height: 10%;
   }
   
   /* Style for the image */
